Start on second container CSS

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>ahi.com</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<!-- ------------------------ -->
+
 <body>
     <div class="header">
         <div class="logo">ahi.com</div>
@@ -18,26 +20,38 @@
     </div>
 
     <div class="container-one">
-        <h1>This website is awesome</h1>
-        <p>This website has some subtext that goes here under the main title. It has smaller font and the color is lower contrast</p>
-        <button>Sign up</button>
-        <img src="./images/horizon.jpg" alt="blue-horizon">
+        <div class="con-one-txt">
+        <div class="awesome-title"> This website is awesome</div>
+        <div class="hero-second">This website has some subtext that goes here under the main title. It has smaller font and the color is lower contrast</div>
+        <button class="sign-up">Sign up</button>
+        </div>
+        <div class="awesome-img"><img src="./images/horizon.jpg" alt="blue-horizon"></div>
     </div>
 
     <div class="container-two">
         <h1>Some random information!</h1>
 
+        <div class="con-two">
+        <div class="info">
         <img src="./images/barrel.jpg" alt="barrel">
         <div class="square-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, eveniet?</div>
+        </div>
 
+       <div class="info">
         <img src="./images/barrel.jpg" alt="barrel">
         <div class="square-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, eveniet?</div>
+        </div>
 
+        <div class="info">
         <img src="./images/barrel.jpg" alt="barrel">
         <div class="square-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, eveniet?</div>
+        </div>
 
+        <div class="info">
         <img src="./images/barrel.jpg" alt="barrel">
         <div class="square-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, eveniet?</div>
+        </div>
+        </div>
     </div>
 
     <div class="container-three">
