Create first draft of complete webpage

--- a/index.html
+++ b/index.html
@@ -21,48 +21,55 @@
 
     <div class="container-one">
         <div class="con-one-txt">
-        <div class="awesome-title"> This website is awesome</div>
+        <div class="awesome-title"> Hi, this is a webpage</div>
         <div class="hero-second">This website has some subtext that goes here under the main title. It has smaller font and the color is lower contrast</div>
         <button class="sign-up">Sign up</button>
         </div>
-        <div class="awesome-img"><img src="./images/horizon.jpg" alt="blue-horizon"></div>
+        <div class="awesome-img"><img src="./images/blossoms.jpg" alt="blue-horizon"></div>
     </div>
 
     <div class="container-two">
-        <h1>Some random information!</h1>
+        <div class="info-header">Some random information</div>
 
         <div class="con-two">
         <div class="info">
-        <img src="./images/barrel.jpg" alt="barrel">
+        <img src="./images/fern.jpg" alt="barrel">
         <div class="square-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, eveniet?</div>
         </div>
 
        <div class="info">
-        <img src="./images/barrel.jpg" alt="barrel">
+        <img src="./images/fern.jpg" alt="barrel">
         <div class="square-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, eveniet?</div>
         </div>
 
         <div class="info">
-        <img src="./images/barrel.jpg" alt="barrel">
+        <img src="./images/fern.jpg" alt="barrel">
         <div class="square-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, eveniet?</div>
         </div>
 
         <div class="info">
-        <img src="./images/barrel.jpg" alt="barrel">
+        <img src="./images/fern.jpg" alt="barrel">
         <div class="square-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, eveniet?</div>
         </div>
         </div>
     </div>
 
     <div class="container-three">
-        <p>This is just a random wall of text that we are putting here and it will eventually say something amazing and important but for right now, it pretty much is a placeholder and isn't very amazing or important. Ok? Ok.</p>
-    </div>
+        <div class="quote-text">"This will eventually say something but for right now, it pretty much is a placeholder and isn't very important."</div>
+        <div class="quote-box">
+        <div class="quote-source">
+            - Leahi Johsens
+        </div>
+        </div>
+        </div>
 
     <div class="container-four">
-        <h3>Call to action! It is time!</h3>
-        <p>Smaller text under the larger text that says something</p>
+        <div class="four-text">
+        <div class="four-text-lrg">Larger text. Larger text!</div>
+        <div class="four-text-sml">Smaller text under the larger text that says something</div>
+        </div>
 
-        <button>SIGN ME UP</button>
+        <button class="four-sign-up">Sign up</button>
     </div>
 
     <div class="footer">
