--- a/index.html
+++ b/index.html
@@ -20,48 +20,46 @@
     </div>
 
     <div class="container-one">
-        <div class="con-one-txt">
+        <div class="one-text">
         <div class="awesome-title"> Hi, this is a webpage</div>
-        <div class="hero-second">This website has some subtext that goes here under the main title. It has smaller font and the color is lower contrast</div>
-        <button class="sign-up">Sign up</button>
+        <div class="one-subtext">This website has some subtext that goes here under the main title. It has smaller font and the color is lower contrast</div>
+        <button>Sign up</button>
         </div>
-        <div class="awesome-img"><img src="./images/blossoms.jpg" alt="blue-horizon"></div>
+        <img class="one-img" src="./images/blossoms.jpg" alt="blue-horizon">
     </div>
 
     <div class="container-two">
         <div class="info-header">Some random information</div>
 
-        <div class="con-two">
+        <div class="info-section">
         <div class="info">
-        <img src="./images/fern.jpg" alt="barrel">
-        <div class="square-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, eveniet?</div>
+        <img src="./images/fern.jpg" alt="fern leaf">
+        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, eveniet?</div>
         </div>
 
        <div class="info">
-        <img src="./images/fern.jpg" alt="barrel">
-        <div class="square-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, eveniet?</div>
+        <img src="./images/fern.jpg" alt="fern leaf">
+        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, eveniet?</div>
         </div>
 
         <div class="info">
-        <img src="./images/fern.jpg" alt="barrel">
-        <div class="square-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, eveniet?</div>
+        <img src="./images/fern.jpg" alt="fern leaf">
+        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, eveniet?</div>
         </div>
 
         <div class="info">
-        <img src="./images/fern.jpg" alt="barrel">
-        <div class="square-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, eveniet?</div>
+        <img src="./images/fern.jpg" alt="fern leaf">
+        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, eveniet?</div>
         </div>
         </div>
     </div>
 
     <div class="container-three">
         <div class="quote-text">"This will eventually say something but for right now, it pretty much is a placeholder and isn't very important."</div>
-        <div class="quote-box">
-        <div class="quote-source">
+        <div class="quote-src">
             - Leahi Johsens
         </div>
-        </div>
-        </div>
+    </div>
 
     <div class="container-four">
         <div class="four-text">
@@ -69,7 +67,7 @@
         <div class="four-text-sml">Smaller text under the larger text that says something</div>
         </div>
 
-        <button class="four-sign-up">Sign up</button>
+        <button>Sign up</button>
     </div>
 
     <div class="footer">
